Mudando tamanho dos elementos da lista de Habilidades

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <p><em>Habilidades que irei aprender no decorrer do curso.</em></p>
 
     <ul>
-      <li>Unix & Bash</li>
-      <li>Git e GitHub</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Javascript</li>
-      <li>React</li>
+      <li id="skill-1">Unix & Bash</li>
+      <li id="skill-2">Git e GitHub</li>
+      <li id="skill-3">HTML</li>
+      <li id="skill-4">CSS</li>
+      <li id="skill-5">Javascript</li>
+      <li id="skill-6">React</li>
     </ul>
 
     <h2 id="passatempos" class="style-titles">Passatempos</h2>
